--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,14 +1,14 @@
 <?php
 
 $header = <<<EOF
-0.1 theme for Contao Open Source CMS
+convert theme for Contao Open Source CMS
 
-Copyright (C) 2019 pdir / digital agentur <develop@pdir.de>
+Copyright (C) 2020 pdir / digital agentur <develop@pdir.de>
 
 @package    contao-themes-net/convert-theme-bundle
 @link       https://github.com/contao-themes-net/convert-theme-bundle
 @license    pdir contao theme licence
-@author     Mathias Arzberger <develop@pdir.de>
+@author     Philipp Seibt <develop@pdir.de>
 
 For the full copyright and license information, please view the LICENSE
 file that was distributed with this source code.
