--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "contao-themes-net/convert-theme-bundle",
     "type": "contao-bundle",
     "description": "CONVERT Theme Bundle for Contao 4",
-    "license": "LGPL-3.0-or-later",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Webdesign für Contao",
