--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "terminal42/contao-folderpage": "^3.0",
         "pdir/contao-theme-helper-bundle": "^1.4",
         "contao-themes-net/theme-components-bundle": "^1.4",
-        "symfony/twig-bundle": "^5.4 || ^6.0"
+        "symfony/twig-bundle": "^5.4 || ^6.0",
+        "scssphp/scssphp": "^1.0"
     },
     "conflict": {
         "contao/core": "*",
